- adding histogram, line chart to params - adding coverage limit to params - adding sampling type to params